added musicLib controller and views

--- a/app/frontend/views/musicPlaylist.html
+++ b/app/frontend/views/musicPlaylist.html
@@ -1,4 +1,4 @@
-<section id="admin" class="admin section offset-header">
+<section id="musicPlaylist" class="musicPlaylist section offset-header">
 	<div class="container text-center">
 		<h1>Tasks</h1>
 		<table class="tasks-table">
