--- a/app/frontend/css/styles.css
+++ b/app/frontend/css/styles.css
@@ -1,308 +1,54 @@
-@import "variables";
-@import "partials/main";
-@import "partials/admin";
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-@import url(http://fonts.googleapis.com/css?family=Montserrat:700);
-/* Default */
-/* ======= Base ======= */
-body {
-  font-family: 'Lato', arial, sans-serif;
-  color: #444444;
-  font-size: 16px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h1,h2,h3,h4,h5,h6 {
+  font-weight: 100;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
-  color: #1affb2;
+h1 {
+  font-size: 80px;
+  color: #08A1F3;
 }
-a {
-  color: #1affb2;
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
+h2 {
+  font-size: 55px;
+  color: #117AB3;
 }
-a:hover {
-  text-decoration: underline;
-  color: #00e699;
+h3 {
+  font-size: 40px;
+  color: #117AB3;
 }
-.btn,
-a.btn {
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  font-family: 'Montserrat', arial, sans-serif;
-  padding: 8px 16px;
-  font-weight: bold;
-}
-.btn .fa,
-a.btn .fa {
-  margin-right: 5px;
-}
-.btn:focus,
-a.btn:focus {
-  color: #fff;
-}
-a.btn-cta-primary,
-.btn-cta-primary {
-  background: #008055;
-  border: 1px solid #008055;
-  color: #fff;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-a.btn-cta-primary:hover,
-.btn-cta-primary:hover {
-  background: #006644;
-  border: 1px solid #006644;
-  color: #fff;
-}
-a.btn-cta-secondary,
-.btn-cta-secondary {
-  background: #1aff1a;
-  border: 1px solid #1aff1a;
-  color: #fff;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-a.btn-cta-secondary:hover,
-.btn-cta-secondary:hover {
-  background: #00ff00;
-  border: 1px solid #00ff00;
-  color: #fff;
-}
-.text-highlight {
-  color: #008055;
-}
-.offset-header {
-  padding-top: 90px;
-}
-pre code {
-  font-size: 16px;
-}
-/* ======= Header ======= */
-.header {
-  padding: 10px 0;
-  background: #1affb2;
-  color: #000000;
-  position: fixed;
-  width: 100%;
-}
-.header.navbar-fixed-top {
-  background: #000000;
-  z-index: 9999;
-  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
-}
-.header.navbar-fixed-top .logo a {
-  color: #1affb2;
-}
-.header.navbar-fixed-top .main-nav .nav .nav-item a {
-  color: #666666;
-}
-.header .logo {
-  margin: 0;
-  font-size: 26px;
-  font-family: 'Montserrat';
-  padding-top: 10px;
-}
-.header .logo a {
-  color: #000000;
-}
-.header .logo a:hover {
-  text-decoration: none;
-}
-.header .main-nav button {
-  background: #008055;
-  color: #000000 !important;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  border-radius: 4px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-}
-.header .main-nav button:focus {
-  outline: none;
-}
-.header .main-nav button .icon-bar {
-  background-color: #000000;
-}
-.header .main-nav .navbar-collapse {
-  padding: 0;
-}
-.header .main-nav .nav .nav-item {
-  font-weight: normal;
-  margin-right: 30px;
-  font-family: 'Montserrat', sans-serif;
-}
-.header .main-nav .nav .nav-item.active a {
-  color: #1affb2;
-  background: none;
-}
-.header .main-nav .nav .nav-item a {
-  color: #00b377;
-  -webkit-transition: none;
-  -moz-transition: none;
-  -ms-transition: none;
-  -o-transition: none;
-  font-size: 14px;
-  padding: 15px 10px;
-}
-.header .main-nav .nav .nav-item a:hover {
-  color: #008055;
-  background: none;
-}
-.header .main-nav .nav .nav-item a:focus {
-  outline: none;
-  background: none;
-}
-.header .main-nav .nav .nav-item a:active {
-  outline: none;
-  background: none;
-}
-.header .main-nav .nav .nav-item.active {
-  color: #1affb2;
-}
-.header .main-nav .nav .nav-item.last {
-  margin-right: 0;
-}
-
-/* ======= Footer ======= */
-.footer {
-  position: fixed;
-  bottom: 0;
-  margin: 0;
-  width: 100%;
-  padding: 15px 0;
-  background: #004d33;
-  color: #000000;
-}
-.footer .copyright {
-  -webkit-opacity: 0.8;
-  -moz-opacity: 0.8;
-  opacity: 0.8;
-}
-
-
-
-
-
-
-/* ======= Promo Section ======= */
-.promo {
-  background: #000000;
-  color: #000000;
-  padding-top: 150px;
-}
-.promo .title {
-  font-size: 98px;
-  color: #008055;
-  margin-top: 0;
-}
-.promo .title .highlight {
-  color: #1aff1a;
-}
-.promo .intro {
-  font-size: 28px;
-  max-width: 680px;
-  margin: 0 auto;
-  margin-bottom: 0;
-}
-.promo .btns .btn {
-  margin-right: 15px;
+h4 {
   font-size: 18px;
-  padding: 8px 30px;
+  color: #117AB3;
 }
-.promo .meta {
-  margin-top: 50px;
-  margin-bottom: 30px;
-  color: #00b377;
+h5 {
+  font-size: 12px;
+  color: #117AB3;
 }
-.promo .meta li {
-  margin-right: 15px;
+h6 {
+  font-size: 8px;
+  color: #117AB3;
 }
-.promo .meta a {
-  color: #00b377;
+body {
+	background-color: #1C272C;
 }
-.promo .meta a:hover {
-  color: #008055;
+.content {
+	margin-top: 50px;
 }
-
-/* ======= About Section ======= */
-.about {
-  padding: 50px 0;
-  background: #000000;
+.undecorated-link:hover {
+	text-decoration: none;
 }
-.about .title {
-  color: #008055;
-  margin-top: 0;
-  margin-bottom: 60px;
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+	display: none !important;
 }
-.about .intro {
-  max-width: 800px;
-  margin: 0 auto;
-  margin-bottom: 0;
+.ng-invalid.ng-dirty {
+	border-color: #FA787E;
+}
+.ng-valid.ng-dirty {
+	border-color: #78FA89;
 }
 
-
-/* ======= Contact Section ======= */
-.contact {
-  padding: 50px 0;
-  background: #1affb2;
-  color: #000000;
+/* navbar */
+.navbar-nav > li > a, .navbar-brand {
+    padding-top:20px !important;
+    padding-bottom:0 !important;
+    height: 60px;
+    font-size: 20px;
 }
-.contact .contact-inner {
-  max-width: 760px;
-  margin: 0 auto;
-}
-.contact .title {
-  color: #008055;
-  margin-top: 0;
-  margin-bottom: 30px;
-}
-.contact .intro {
-  margin-bottom: 50px;
-}
-
-
-
-.admin {
-
-}
-
-.admin .tasks-table {
-  width: 100%;
-  min-width: 200px;
-  margin: auto;
-  text-align: left;
-}
-
-.admin .tasks-table tr td, .admin .tasks-table tr th {
-  padding:10px;
-  border: 1px solid #000000;
-}
-
-.admin .tasks-table tr .actions-col {
-  width: 100px;
-}
-
-.actions-col i {
-  font-size: 26px;
-}
-
-.actions-col i:hover {
-  cursor: pointer;
-  color: #1affb2;
-}
+.navbar {min-height:60px !important;}
