--- a/app/frontend/views/header.html
+++ b/app/frontend/views/header.html
@@ -2,77 +2,84 @@
 <!-- ******HEADER****** -->
 <div ng-controller="HeaderCtrl">
   <header id="header" class="header">
-    <div class="container">
-      <h1 class="logo pull-left">
-        <a class="scrollto" href="/">
-          <span class="logo-title">Etherac</span>
-        </a>
-      </h1><!--//logo-->
-      <nav class="nav navbar-nav navbar-right" role="navigation">
-        <ul>
-          <li ng-show="isSignedIn" class="nav-item"><a class="scrollto" href="/admin">Admin</a></li>
-          <li ng-show="isSignedIn" class="nav-item"><a class="scrollto" href="#" ng-click="signout()" >Signout</a></li>
-          <li ng-hide="isSignedIn" class="nav-item"><a class="scrollto" href="#" ng-click="signinModal()" >Sign In</a></li>
-          <li ng-hide="isSignedIn" class="nav-item"><a class="scrollto" href="#" ng-click="signupModal()" >Sign Up</a></li>
-          <li class="nav-item last">
-            <a class="scrollto" href="https://github.com/jbltx/generator-mean-stack" target="_blank">Docs</a>
-          </li>
-        </ul><!--//nav-->
-      </nav><!--//main-nav-->
-    </div>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+          </button>
+          <a class="navbar-brand" href="/#">Etherac</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+          <ul class="nav navbar-nav navbar-right">
+            <li ng-show="isSignedIn"><a href="/musicLib">Music Library</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" ng-hide="isSignedIn">User <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" ng-show="isSignedIn">{{currentUser.fullname}} <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li ng-hide="isSignedIn"><a href="#" ng-click="signupModal()">Sign Up</a></li>
+                <li ng-show="isSignedIn"><a href="/admin">Admin</a></li>
+                <li role="separator" class="divider"></li>
+                <li ng-hide="isSignedIn"><a href="#" ng-click="signinModal()">Sign In</a></li>
+                <li ng-show="isSignedIn"><a href="#" ng-click="signout()">Signout</a></li>
+              </ul>
+            </li>
+          </ul>
+      </div><!-- /.container-fluid -->
+    </nav>
   </header><!--//header-->
 
   <script type="text/ng-template" id="signin.html">
-  <div class="modal-header">
-  <h3 class="modal-title">Authentication Panel</h3>
-  </div>
-  <div class="modal-body">
-  <div class="form-group">
-  <label for="email">Email</label>
-  <input class="form-control" type="email" name="email" ng-model="user.email" placeholder="Email">
-  </div>
-  <div class="form-group">
-  <label for="password">Password</label>
-  <input class="form-control" type="password" name="password" ng-model="user.password" placeholder="Password">
-  </div>
-  <p><input type="checkbox" name="remember" ng-model="user.remember"> Remember Me<p>
-  <p style="color:red">{{signInMessage}}</p>
-  </div>
+    <div class="modal-header">
+      <h3 class="modal-title">Authentication Panel</h3>
+    </div>
+    <div class="modal-body">
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input class="form-control" type="email" name="email" ng-model="user.email" placeholder="Email">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input class="form-control" type="password" name="password" ng-model="user.password" placeholder="Password">
+      </div>
+      <p><input type="checkbox" name="remember" ng-model="user.remember"> Remember Me<p>
+      <p style="color:red">{{signInMessage}}</p>
+    </div>
 
-  <div class="modal-footer">
-  <button class="btn btn-primary" ng-click="signin()">Sign In</button>
-  <button class="btn btn-warning" ng-click="cancel()">Close</button>
-  </div>
+    <div class="modal-footer">
+      <button class="btn btn-primary" ng-click="signin()">Sign In</button>
+      <button class="btn btn-warning" ng-click="cancel()">Close</button>
+    </div>
   </script>
 
   <script type="text/ng-template" id="signup.html">
-  <div class="modal-header">
-  <h3 class="modal-title">Authentication Panel</h3>
-  </div>
-  <div class="modal-body">
-  <div class="form-group">
-  <label for="fullname">Full Name</label>
-  <input class="form-control" type="name" name="fullname" ng-model="user.fullname" placeholder="Full Name">
-  </div>
-  <div class="form-group">
-  <label for="email">Email</label>
-  <input class="form-control" type="email" name="email" ng-model="user.email" placeholder="Email">
-  </div>
-  <div class="form-group">
-  <label for="password">Password</label>
-  <input class="form-control" type="password" name="password" ng-model="user.password" placeholder="Password">
-  </div>
-  <div class="form-group">
-  <label for="pass2">Confirm Password</label>
-  <input class="form-control" type="password" name="pass2" ng-model="user.pass2" placeholder="Confirm Password">
-  </div>
-  <p style="color:red">{{signUpMessage}}</p>
-  </div>
-  <div class="modal-footer">
-  <button class="btn btn-primary" ng-click="signup()">Sign Up</button>
-  <button class="btn btn-warning" ng-click="cancel()">Close</button>
-  </div>
+    <div class="modal-header">
+      <h3 class="modal-title">Authentication Panel</h3>
+    </div>
+    <div class="modal-body">
+      <div class="form-group">
+        <label for="fullname">Full Name</label>
+        <input class="form-control" type="name" name="fullname" ng-model="user.fullname" placeholder="Full Name">
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input class="form-control" type="email" name="email" ng-model="user.email" placeholder="Email">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input class="form-control" type="password" name="password" ng-model="user.password" placeholder="Password">
+      </div>
+      <div class="form-group">
+        <label for="pass2">Confirm Password</label>
+        <input class="form-control" type="password" name="pass2" ng-model="user.pass2" placeholder="Confirm Password">
+      </div>
+      <p style="color:red">{{signUpMessage}}</p>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-primary" ng-click="signup()">Sign Up</button>
+      <button class="btn btn-warning" ng-click="cancel()">Close</button>
+    </div>
   </script>
-
-
 </div>
