--- a/app/frontend/views/main.html
+++ b/app/frontend/views/main.html
@@ -1,10 +1,12 @@
 <!-- ******PROMO****** -->
 <section id="promo" class="promo section offset-header">
-  <div class="container text-center">
+  <div class="container-fluid text-center">
     <div class="container-fluid">
       <div class="col-md-4 title">
-        <h1 style="text-align:left">{{curTime.time.hours}}:{{curTime.time.min}}:{{curTime.time.sec}}</h1>
-        <h3>{{curTime.time.meridiem}}</h3>
+        <h1 style="text-align:left">
+          {{curTime.time.hours}}:{{curTime.time.min}}:{{curTime.time.sec}}
+          <h3>{{curTime.time.meridiem}}</h3>
+        </h1>
       </div>
 
       <div class="col-md-4 col-md-offset-4">
@@ -17,10 +19,11 @@
         </center>
       </div>
 
-      <div class="col-md-4">
-        <h3 style="text-align:right;">{{curTime.day}}</h3>
-        <h1 style="text-align:left;float:right;font-size: 60px;">{{curTime.month}}</h1>
-        <h1 style="text-align:right;float:right;font-size: 120px;">{{curTime.dayNumber}}</h1>
+      <div>
+        <h3 style="text-align:right;">{{curTime.day}}&nbsp;&nbsp;&nbsp;&nbsp;</h3>
+        <h1 style="text-align:right;float:right;font-size: 120px;">&nbsp;&nbsp;{{curTime.dayNumber}}&nbsp;&nbsp;</h1><br>
+        <h1 style="text-align:left;float:right;font-size: 60px;">&nbsp;&nbsp;{{curTime.month}}&nbsp;&nbsp;<br><br></h1>
+
         <br><br><br><br><br>
         <h3 style="text-align:right;float:right;">{{curTime.year}}</h3>
       </div>
