--- a/app/frontend/views/musicPlayer.html
+++ b/app/frontend/views/musicPlayer.html
@@ -1,4 +1,4 @@
-<section id="admin" class="admin section offset-header">
+<section id="musicPlayer" class="musicPlayer section offset-header">
 	<div class="container text-center">
 		<h1>Tasks</h1>
 		<table class="tasks-table">
