--- a/app/frontend/css/styles.css
+++ b/app/frontend/css/styles.css
@@ -53,6 +53,47 @@ body {
 }
 .navbar {min-height:60px !important;}
 
-.musicLibrary-table > th, tr {
-   width: 60px;
+.musicLibsongs > td {
+   padding: 10px;
+   width: 20%;
+}
+
+.titleCol {
+   color: white;
+   width: 30%;
+}
+
+.artistCol {
+  color: white;
+  width: 10%;
+}
+
+.albumCol {
+   color: white;
+   width: 15%;
+}
+
+.lengthCol {
+   color: white;
+   width: 10%;
+}
+
+.titleColHead {
+   font-size: 30px;
+   color: white;
+}
+
+.artistColHead {
+  font-size: 30px;
+  color: white;
+}
+
+.albumColHead {
+   font-size: 30px;
+   color: white;
+}
+
+.lengthColHead {
+   font-size: 30px;
+   color: white;
 }
