--- a/app/frontend/views/musicLib.html
+++ b/app/frontend/views/musicLib.html
@@ -1,63 +1,74 @@
 <section id="musicLib" class="musicLib section offset-header">
-	<div class="container text-center">
+	<div class="container-fluid text-center">
 		<h1>Music Library</h1>
-		<div style="height: 400px; overflow: auto">
-		<table class="musicLibrary">
-			<tr>
-				<th class="titleColHead"><center>Name</center></th>
-				<th class="artistColHead"><center>Artist</center></th>
-				<th class="albumColHead"><center>Album</center></th>
-				<th class="lengthColHead"><center>Length</center></th>
-			</tr>
-			<tr ng-repeat="song in songlibrary" ng-click="addToNowPlaying(song)" class="musicLibsongs">
-				<td class="titleCol">{{song.title}}</td>
-				<td class="artistCol">{{song.artist}}</td>
-				<td class="albumCol">{{song.album}}</td>
-				<td class="lengthCol">{{song.length}}</td>
-			</tr>
-		</table>
+		<div class="col-md-8" style="height: 600px; overflow: auto">
+			<table class="musicLibrary">
+				<tr>
+					<th class="titleColHead"><center>Name</center></th>
+					<th class="artistColHead"><center>Artist</center></th>
+					<th class="albumColHead"><center>Album</center></th>
+					<th class="lengthColHead"><center>Length</center></th>
+				</tr>
+				<tr ng-repeat="song in songlibrary" ng-click="addToNowPlaying(song)" class="musicLibsongs">
+					<td class="titleCol">{{song.title}}</td>
+					<td class="artistCol">{{song.artist}}</td>
+					<td class="albumCol">{{song.album}}</td>
+					<td class="lengthCol">{{song.length}}</td>
+				</tr>
+			</table>
 		</div>
-
-		<div id="jquery_jplayer_1" class="jp-jplayer"></div>`
-		<div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
-			<div class="jp-type-single">
-				<div class="jp-gui jp-interface">
-					<div class="jp-controls">
-						<button class="jp-play" role="button" tabindex="0">play</button>
-						<button class="jp-pause" role="button" tabindex="0">pause</button>
-						<button class="jp-stop" role="button" tabindex="0">stop</button>
-					</div>
-					<div class="jp-progress">
-						<div class="jp-seek-bar">
-							<div class="jp-play-bar"></div>
+		<div class="col-md-4">
+			<div id="jp_container_1" class="jp-video jp-video-270p" role="application" aria-label="media player">
+				<div class="jp-type-playlist">
+					<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+					<div class="jp-gui">
+						<div class="jp-video-play">
+							<button class="jp-video-play-icon" role="button" tabindex="0">play</button>
+						</div>
+						<div class="jp-interface">
+							<div class="jp-progress">
+								<div class="jp-seek-bar">
+									<div class="jp-play-bar"></div>
+								</div>
+							</div>
+							<div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
+							<div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
+							<div class="jp-controls-holder">
+								<div class="jp-controls">
+									<button class="jp-previous" role="button" tabindex="0">previous</button>
+									<button class="jp-play" role="button" tabindex="0">play</button>
+									<button class="jp-next" role="button" tabindex="0">next</button>
+									<button class="jp-stop" role="button" tabindex="0">stop</button>
+								</div>
+								<div class="jp-volume-controls">
+									<button class="jp-mute" role="button" tabindex="0">mute</button>
+									<button class="jp-volume-max" role="button" tabindex="0">max volume</button>
+									<div class="jp-volume-bar">
+										<div class="jp-volume-bar-value"></div>
+									</div>
+								</div>
+								<div class="jp-toggles">
+									<button class="jp-repeat" role="button" tabindex="0">repeat</button>
+									<button class="jp-shuffle" role="button" tabindex="0">shuffle</button>
+									<button class="jp-full-screen" role="button" tabindex="0">full screen</button>
+								</div>
+							</div>
+							<div class="jp-details">
+								<div class="jp-title" aria-label="title">&nbsp;</div>
+							</div>
 						</div>
 					</div>
-					<div class="jp-volume-controls">
-						<button class="jp-mute" role="button" tabindex="0">mute</button>
-						<button class="jp-volume-max" role="button" tabindex="0">max volume</button>
-						<div class="jp-volume-bar">
-							<div class="jp-volume-bar-value"></div>
-						</div>
-					</div>
-					<div class="jp-time-holder">
-						<div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
-						<div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
-						<div class="jp-toggles">
-							<button class="jp-repeat" role="button" tabindex="0">repeat</button>
-						</div>
-					</div>
-				</div>
-				<div class="jp-details">
-					<div class="jp-title" aria-label="title">&nbsp;</div>
-				</div>
-				<div class="jp-no-solution">
-					<span>Update Required</span>
-					To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-				</div>
-				<div class="jp-playlist">
-					<ul>
-						<li></li> <!-- Empty <li> so your HTML conforms with the W3C spec -->
+					<div class="jp-playlist">
+						<ul>
+							<!-- The method Playlist.displayPlaylist() uses this unordered list -->
+							<li>&nbsp;</li>
 						</ul>
 					</div>
+					<div class="jp-no-solution">
+						<span>Update Required</span>
+						To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+					</div>
 				</div>
-			</section>
+			</div>
+		</div>
+	</section>
