--- a/app/frontend/views/musicLib.html
+++ b/app/frontend/views/musicLib.html
@@ -71,4 +71,6 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- <button ngf-select="uploadFiles($files)" multiple accept="audio/*">Upload Songs</button>-->
 	</section>
