--- a/app/frontend/views/main.html
+++ b/app/frontend/views/main.html
@@ -17,7 +17,7 @@
           <h4>Wind speed {{weather.windSpeed}}</h4>
           <h4>Chance of Percipitation {{weather.precipProbability}}%</h4>
           <h3>Sunrise/Sunset</h3>
-          <h4>{{weather.sunrise}} AM/ {{weather.sunset}} PM</h4>
+          <h4>{{weather.sunData.sunriseTime}} AM / {{weather.sunData.sunsetTime}} PM</h4>
         </center>
       </div>
 
