--- a/app/frontend/views/main.html
+++ b/app/frontend/views/main.html
@@ -15,7 +15,7 @@
         <center>
           <h4>{{weather.humidity}}% Humidity</h4>
           <h4>Wind speed {{weather.windSpeed}}</h4>
-          <h4>Chance of Percipitation {{weather.precipProbability}}%</h4>
+          <h4>Chance of Percipitation {{weather.precipProbability * 100}}%</h4>
           <h3>Sunrise/Sunset</h3>
           <h4>{{weather.sunData.sunriseTime}} AM / {{weather.sunData.sunsetTime}} PM</h4>
         </center>
