--- a/app/frontend/views/musicLib.html
+++ b/app/frontend/views/musicLib.html
@@ -1,19 +1,20 @@
 <section id="musicLib" class="musicLib section offset-header">
 	<div class="container-fluid text-center">
 		<h1>Music Library</h1>
+
+		<button><a href="#" ng-click="uploadSongModal()" class="fa fa-upload">  Upload Song</a></button>
+
 		<div class="col-md-8" style="height: 600px; overflow: auto">
 			<table class="musicLibrary">
 				<tr>
 					<th class="titleColHead"><center>Name</center></th>
 					<th class="artistColHead"><center>Artist</center></th>
 					<th class="albumColHead"><center>Album</center></th>
-					<th class="lengthColHead"><center>Length</center></th>
 				</tr>
-				<tr ng-repeat="song in songlibrary" ng-dblclick="addToNowPlaying(song)" class="musicLibsongs"ng-class="{songHover: hover}"  ng-mouseenter="hover = true" ng-mouseleave="hover = false">
+				<tr ng-repeat="song in songlibrary" ng-dblclick="addToNowPlaying(song)" class="musicLibsongs" ng-class="{songHover: hover}" ng-mouseenter="hover = true" ng-mouseleave="hover = false">
 					<td class="titleCol">{{song.title}}</td>
 					<td class="artistCol">{{song.artist}}</td>
 					<td class="albumCol">{{song.album}}</td>
-					<td class="lengthCol">{{song.length}}</td>
 				</tr>
 			</table>
 		</div>
@@ -72,5 +73,26 @@
 			</div>
 		</div>
 
-		<!-- <button ngf-select="uploadFiles($files)" multiple accept="audio/*">Upload Songs</button>-->
+
+		<script type="text/ng-template" id="songUpload.html">
+			<div class="modal-header">
+				<h3 class="modal-title">Upload Songs</h3>
+			</div>
+			<div class="modal-body">
+				<span class="progress" ng-show="progress >= 0">
+					<div ng-repeat="file in files">
+						<h4>{{file.name}}</h4>
+					</div>
+					<div style="width:{{progress}}%" ng-bind="progress + '%'"></div>
+				</span>
+				<form name="form">
+					<label for="songs" class="hidden"></label>
+					<button class="button btn" ngf-select="uploadFiles($files)" name="songs" ngf-multiple="true" ngf-accept="'audio/*'">Upload Songs</button>
+				</form>
+
+			</div>
+			<div class="modal-footer">
+				<button class="btn btn-warning" ng-click="cancel()">Close</button>
+			</div>
+		</script>
 	</section>
